# dapla-statbank-authenticator

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  flake.nix  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: alert-deploy.yaml  build-deploy-app.yaml  build-for-ar.yaml  constraints.txt  nix-check.yaml  release-on-version-change.yaml  tests.yaml  update-dependencies.yml
.nais/: alerts.yaml  prod.yaml  test.yaml
app/: main.py  types.py
pipelines/: azure-pipeline.yaml
tests/: test_api.py  test_health.py
