[tool.poetry]
name = "dapla-statbank-authenticator"
version = "0.1.8"
description = "A template repository for Python microservices targeting Kuberntes deployment"
authors = ["Statistics Norway <mmw@ssb.no>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/statisticsnorway/dapla-statbank-authenticator"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
gunicorn = "^21.2.0"
python-json-logger = "^2.0.7"
prometheus-fastapi-instrumentator = "^6.1.0"
aes-pkcs5 = "^1.0.3"
google-cloud-secret-manager = "^2.18.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pycrunch-engine = "^1.6.4"
requests = "^2.31.0"
bump2version = "^1.0.1"
toml = "^0.10.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
